--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -31,6 +31,29 @@
               <a class="nav-link" href="/djangoapp/contact" role="button">Contact us</a>
             </li>
           </ul>
+        </nav>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+          <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+                    Dealership Review
+                    <p style="text-align:right;"> <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" href="">Logout</a></p>
+               
+                {% else %}
+                
+                    <form class="form-inline" action="" method="post">
+                    {% csrf_token %}
+                        <div class="input-group">
+                            Dealership Review
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="/djangoapp/register">Sign Up</a>
+                        </div>
+                    </form>
+                
+                {% endif %}
+                </ul>
         </div>
       </nav>
     <!--Add a dealer table here -->
