--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -7,20 +7,20 @@
 </head>
     <body>
         <form action="{}" method="post">
-            <div class="container">
+            <div class="form-group">
               <h1>Sign Up</h1>
               <hr>
               <label for="username"><b>User Name</b></label>
-              <input type="text" placeholder="Enter User Name: " name="username" required>
+              <input class="form-control" type="text" placeholder="Enter User Name: " name="username" required>
               <label for="firstname"><b>First Name</b></label>
-              <input type="text" placeholder="Enter First Name: " name="firstname" required>
+              <input class="form-control" type="text" placeholder="Enter First Name: " name="firstname" required>
               <label for="lastname"><b>Last Name</b></label>
-              <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+              <input class="form-control" type="text" placeholder="Enter Last Name: " name="lastname" required>
               <label for="psw"><b>Password</b></label>
-              <input type="password" placeholder="Enter Password: " name="psw" required>
+              <input class="form-control" type="password" placeholder="Enter Password: " name="psw" required>
               <div>
                   {% csrf_token %}
-                  <button class="button" type="submit">Sign Up</button>
+                  <button href="/djangoapp/signup" class="btn btn-primary" type="submit">Sign Up</button>
               </div>
             </div>
           </form>
